--- a/public/css/vai.css
+++ b/public/css/vai.css
@@ -4,8 +4,34 @@ button[disabled] {
     background-color: grey !important;
 }
 
-.choiceConfirm, .answerCard {
+button {
     display: block;
+    line-height: 1em;
+    text-align: left;
+    height: 5em;
+    word-wrap: break-word;
+    white-space:normal;
+}
+
+.choiceConfirm {
+    display: block;
+    line-height: 1em;
+    text-align: left;
+    height: 5em;
+    word-wrap: break-word;
+    white-space:normal;
+}
+
+.answerCard {
+    display: block;
+    line-height: 1em;
+    text-align: left;
+    height: 5em;
+    word-wrap: break-word;
+    white-space:normal;
+}
+
+.questionCard {
     line-height: 1em;
     text-align: left;
     height: 5em;
