--- a/public/css/vai.css
+++ b/public/css/vai.css
@@ -38,3 +38,9 @@ button {
     word-wrap: break-word;
     white-space:normal;
 }
+
+.playerList {
+    background-color: #CCC;
+    border-radius: 4px;
+    border: 1px solid #999;
+}
