--- a/public/css/vai.css
+++ b/public/css/vai.css
@@ -47,3 +47,11 @@ button {
     border-radius: 4px;
     border: 1px solid #999;
 }
+
+.results {
+    border-radius: 4px;
+    border: 1px solid #cecece;
+    padding: .5em
+    margin-bottom: 1em;
+    background-color:#cceecc;
+}
