--- a/public/css/vai.css
+++ b/public/css/vai.css
@@ -43,6 +43,7 @@ button {
 }
 
 .playerList {
+    border-radius: 4px;
     background-color: #ddeeff;
     border-radius: 5px;
     border: 1px solid #999;
@@ -50,6 +51,10 @@ button {
 
 .playerList td {
     border-bottom: 1px solid #999;
+}
+
+.playerList td:first-child {
+    padding-left: 1em;
 }
 
 .results {
