--- a/public/css/vai.css
+++ b/public/css/vai.css
@@ -40,6 +40,7 @@ button {
     height: 5em;
     word-wrap: break-word;
     white-space:normal;
+    display: block;
 }
 
 .playerList {
@@ -58,6 +59,7 @@ button {
 }
 
 .results {
+    display: block;
     border-radius: 4px;
     border: 1px solid #cecece;
     padding: .5em
