--- a/public/css/vai.css
+++ b/public/css/vai.css
@@ -63,7 +63,7 @@ button {
     display: block;
     border-radius: 4px;
     border: 1px solid #cecece;
-    padding: .5em
+    padding: .5em;
     margin-bottom: 1em;
     background-color:#cceecc;
 }
